Bug 99196 - DFG array allocation calls should not return an encoded JSValue
Summary: DFG array allocation calls should not return an encoded JSValue
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Filip Pizlo
URL:
Keywords:
Depends on:
Blocks: 98608
  Show dependency treegraph
 
Reported: 2012-10-12 12:00 PDT by Filip Pizlo
Modified: 2012-10-12 12:22 PDT (History)
6 users (show)

See Also:


Attachments
the patch (15.27 KB, patch)
2012-10-12 12:04 PDT, Filip Pizlo
mhahnenberg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Filip Pizlo 2012-10-12 12:00:11 PDT
They should return a pointer instead.
Comment 1 Filip Pizlo 2012-10-12 12:04:27 PDT
Created attachment 168459 [details]
the patch
Comment 2 Mark Hahnenberg 2012-10-12 12:07:35 PDT
Comment on attachment 168459 [details]
the patch

r=me
Comment 3 Filip Pizlo 2012-10-12 12:22:48 PDT
Landed in http://trac.webkit.org/changeset/131210