DFG array allocation calls should not return an encoded JSValue https://bugs.webkit.org/show_bug.cgi?id=99196

Reviewed by Mark Hahnenberg.

The array allocation operations now return a pointer instead. This makes it
easier to share code between 32-bit and 64-bit.

* dfg/DFGOperations.cpp:
* dfg/DFGOperations.h:
* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::callOperation):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/117178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131210 268f45cc-cd09-0410-ab3c-d52691b4dbfc